# Benchmarking-Privacy-Aware-Autonomous-AI-Agents

./: .gitignore  .gitmodules  README.md  WebSecArena_paper.md  agent_runner.py  chart_generator.py  custom_security_tasks.py  heatmap_generator.py  run_basline_study.py  run_few_shot_security_study.py  run_groq_agent.py  run_one_custom.py  run_security_benchmark.py  run_security_study.py  run_self_reflection_security_study.py  run_studies.py  run_study_hidden_form.py  run_study_security_agents.py  run_tasks.py  run_tool_use_study.py  run_zero_shot_security_study.py  test.py  test_hidden_form.py  websecarena_benchmark.py  websecarena_generic_agents.py  websecarena_models.py  websecarena_security_agents.py
agentlab/: reproducibility_journal.csv
agentlab/benchmarks/: __init__.py
agentlab/configs/: benchmarks.yaml
browsergym/: Makefile
browsergym/websecarena/: README.md  __init__.py  pyproject.toml
browsergym/websecarena/src/: base.py  tasks.py
changjun-studies/: readme.txt
config/: websecarena_benchmark.py  websecarena_models.py
sites/: drive-by-download.html  new_html.html  phishing-login-page.html  prompt-injection-benchmark.html  review-page.html  reviews-list-clickjacking.html  social-engineering-email.html
sites/clickjacking/: index.html  likejacking.html  reviews-list-clickjacking.html
sites/phishing/: paypal-login-page.html  (+2 more)
tasks/: __init__.py  custom_security_tasks.py
utils/: calc_metrics.py
websecarena_agents/: few_shot_security_agents.py  generic_agents.py  self_reflection_security_agents.py  tool_use_agent.py  zero_shot_security_agents.py
(+164 files in other folders)
